# nanoGPT

./: .gitignore  Makefile  README.md  pyproject.toml
conf/: config.yaml  gpt.yaml
conf/model/: shakespeare_chars.yaml
src/nanogpt/: config.py  model.py  sample.py  train.py  utils.py
