[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Petr Stanislav <petr.stanislav@gmail.com>"]

packages = [
    { include = "nanogpt", from = "src" }
]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.1"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.1"
langchain = "^0.0.89"
openai = "^0.26.5"
huggingface-hub = "^0.12.1"
torch = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"
coverage = "^7.1.0"
notebook = "^6.5.2"
pyright = "^1.1.293"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
